src/tui/views/snapshots/whk__tui__views__snapshot_tests__sources_dark_styles.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&dark, 80, 24).backend().buffer()"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] ",
        "  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    ",
        " Sources Dests Conns Events DLQ Stats Relay Settings                            ",
        "┌ Sources ─────────────────────────────────────────────────────────────────────┐",
        "│▸ ●  stripe-prod                       1 204 events  2 conns   verify: stripe │",
        "│  ●  github-ci                           318 events  1 conn    verify: github │",
        "│  ◐  shopify-old                          12 events  0 conns   paused         │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        " enter open · n new · e edit · D delete · / filter · L relay · r refresh 3s ago ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 0, fg: Rgb(230, 230, 230), bg: Reset, underline: Reset, modifier: BOLD,
        x: 35, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 2, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 3, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 3, y: 4, fg: Rgb(74, 222, 128), bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 4, y: 4, fg: Reset, bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 6, y: 4, fg: Rgb(230, 230, 230), bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 17, y: 4, fg: Reset, bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 40, y: 4, fg: Rgb(138, 143, 152), bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 52, y: 4, fg: Reset, bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 54, y: 4, fg: Rgb(138, 143, 152), bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 61, y: 4, fg: Reset, bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 64, y: 4, fg: Rgb(138, 143, 152), bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 78, y: 4, fg: Reset, bg: Rgb(42, 47, 58), underline: Reset, modifier: BOLD,
        x: 79, y: 4, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Rgb(230, 230, 230), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 5, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 5, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Rgb(230, 230, 230), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 6, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 6, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 23, fg: Rgb(124, 92, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 23, fg: Rgb(138, 143, 152), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
