src/tui/views/snapshots/whk__tui__views__snapshot_tests__stats_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Stats ───────────────────────────────────────────────────────────────────────┐"
"│range  24h   7d   30d                                                         │"
"│                                                                              │"
"│┌ Deliveries ────────────────────────────────────────────────────────────────┐│"
"││Events 1 204   Failed attempts 41                                           ││"
"││Latency p50 120 ms · p95 880 ms · p99 -                                     ││"
"││████████████████████████████████████████████████████████████████████████████││"
"││✓ succeeded 1180 · ✕ failed 12 · ✕ exhausted 3 · ⠋ pending 9                ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Events per hour ───────────────────────────────────────────────────────────┐│"
"││       ▄▄▄▄▄▄        ██████                                                 ││"
"││       ██████        ██████ ▄▄▄▄▄▄                                          ││"
"││▇▇▇▇▇▇ ██████ ▄▄▄▄▄▄ ██████ ██████ ▃▃▃▃▃▃                                   ││"
"││  06     07     08     09     10     11                                     ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌ By source ─────────────────────────────────────────────────────────────────┐│"
"││stripe-prod                                                 900        75%  ││"
"││github-ci                                                   304        25%  ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" h/l range · 1-3 24h 7d 30d · r refresh · ? help · q quit                3s ago "
