src/tui/views/snapshots/whk__tui__views__snapshot_tests__too_small_59x20.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 59, 20).backend()"
---
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"            Please enlarge the terminal window             "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
